changed 'mainOptions' to 'arguments'

--- a/src/cli/test/data/example-data-structure.yaml
+++ b/src/cli/test/data/example-data-structure.yaml
@@ -1,5 +1,5 @@
 mainCommand: widget-maker
-mainOptions:
+arguments:
   - name: command
     description: The command to execute.
     defaultOption: true
