tweak the example yaml to make the command required and add newline at the end of the file

--- a/src/cli/test/data/example-data-structure.yaml
+++ b/src/cli/test/data/example-data-structure.yaml
@@ -3,6 +3,7 @@ arguments:
   - name: command
     description: The command to execute.
     defaultOption: true
+    required: true
     type: String
   - name: verbose
     description: Makes the output a bit more chatty.
